virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskapp-vs
spec:
  hosts:
  - "*"
  gateways:
  - flaskapp
  http:
  - name: "default" 
    match:
    - uri:
        prefix: /appv2
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: appv2
  - route:
    - destination:
        port:
          number: 80
        host: flaskapp
